--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.1",
     "pinia": "^2.1.7",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
